Edit swagger and some routes
